--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,6 +6,7 @@
     }],
     "routes": [{
         "src": "/(.*)",
-        "dest": "./" 
+        "dest": "./",
+        "method": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     }]
 }
