--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,6 +7,6 @@
     "routes": [{
         "src": "/(.*)",
         "dest": "./",
-        "method": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+        "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     }]
 }
