--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,7 +6,6 @@
     }],
     "routes": [{
         "src": "/(.*)",
-        "dest": "./",
-        "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+        "dest": "/"
     }]
 }
